methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:17: error: type mismatch;
 found   : Unit
 required: Boolean
    while (getCouleurSol() != Color.green) {
    ^